Fixed the title bar text being slightly misaligned (vertically) on all views when in mobile mode.

--- a/src/foundation/_view-title-bar.scss
+++ b/src/foundation/_view-title-bar.scss
@@ -29,6 +29,10 @@ div.title-bar {
     div.title {
         font-weight: 900 !important;
         display: inline-block;
+        
+        @media screen and ( max-width: $maximum-width ) {
+            margin-top: 2px;
+        }
     }
 
     div {
